# Study-Budy-Desktop

./: .env.example  .gitignore  BUILDING.md  README.md  USER_GUIDE.md  build_windows.bat  create_installer.bat  create_portable_zip.bat  installer.iss  launch_study_budy.py  launch_study_budy.py.py  pyproject.toml  requirements-packaging.txt  requirements.txt
.codex/environments/: environment.toml
app/: app.py  main.py  server.py
app/bot/: command_handler.py  twitch_bot.py
app/data/: tasks.json
app/storage/: task_manager.py
app/templates/: overlay.html  overlay_rotate.html
data/: tasks.json
docs/: RELEASE-CHECKLIST.md  WINDOWS-BUILD.md  architecture-audit.md
docs/design/: README.md
packaging/: build_windows.ps1  clean_windows.ps1  pyinstaller_entry.py  smoke_packaged.ps1  study_budy.spec  version_info.txt
packaging/windows/: StudyBudy.iss
study_budy/: __init__.py  appearance_panel.py  button_feedback.py  checkin.py  checkin_view.py  commands.py  connections_view.py  dashboard.py  desktop.py  icons.py  main.py  overlay_clients.py  overlay_preview.py  overlay_service.py  paths.py  preview.py  resources.py  server.py  sidebar.py  status_card.py  storage.py  task_window.py  theme.py  timer_view.py
study_budy/twitch/: api.py  (+6 more)
tests/: test_appearance_panel.py  test_application_theme_and_help.py  test_button_feedback.py  test_checkin.py  test_commands_and_history.py  test_overlay_clients.py  test_overlay_service.py  test_storage.py  test_task_window.py  test_timer.py  test_twitch_auth.py  test_twitch_roles.py  test_twitch_transport.py
web/: overlay.html
(+15 files in other folders)
